Fix scrollbar and update init of SW
fix(pages/*.tsx, components/*.tsx) remove scrollbar on old ios
fix(App.tsx) solve problem of first init of service-worker
fix(serviceWorkerRegistration.ts) solve problem of first init of SW

--- a/src/components/Categories/Categories.css
+++ b/src/components/Categories/Categories.css
@@ -32,6 +32,7 @@
 .Categories_horizontalScroll::-webkit-scrollbar {
   width: 0;
   height: 0;
+  display: none;
 }
 
 .Categories .vkuiHeader {
