--- a/src/pages/ProductInfo/ProductInfo.css
+++ b/src/pages/ProductInfo/ProductInfo.css
@@ -9,6 +9,7 @@
 .ProductInfo::-webkit-scrollbar {
   height: 0;
   width: 0;
+  display: none;
 }
 
 .ProductInfo_offer {
